sandbox/deployment_a_b_testing/deployment-a.yaml
apiVersion: v1
kind: Service
metadata:
  name: deployment-a
  namespace: sandbox
spec:
  selector:
    app: deployment-a
  ports:
  - protocol: "TCP"
    port: 6000
    targetPort: 5000
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-a
  namespace: sandbox
spec:
  selector:
    matchLabels:
      app: deployment-a
  replicas: 4
  template:
    metadata:
      labels:
        app: deployment-a
    spec:
      containers:
      - name: server
        image: galrabin/named-server:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        env:
        - name: SERVER_NAME
          value: "SERVER A"
